--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
       context: .
       dockerfile: docker/Dockerfile
     container_name: staleness-rag-app
+    volumes:
+      - logs:/app/logs
     env_file:
       - .env
     ports:
@@ -20,3 +22,58 @@ services:
       - ./static:/usr/share/nginx/html:ro
       - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf:ro
     restart: unless-stopped
+  loki:
+    image: grafana/loki:2.9.2
+    container_name: chronicle-loki
+    env_file:
+      - .env
+    ports:
+      - "3100:3100"
+    command: -config.file=/etc/loki/loki-config.yaml
+    volumes:
+      - ./observability/loki-config.yaml:/etc/loki/loki-config.yaml:ro
+      - logs:/app/logs   # Shared log volume
+      - loki_data:/loki               # Internal storage for WAL, chunks, index
+    networks:
+      - chronicle-network
+  alloy:
+    image: grafana/alloy:latest
+    container_name: chronicle-alloy
+    env_file:
+      - .env
+    command: run /etc/alloy/config.alloy
+    volumes:
+      - ./observability/config.alloy:/etc/alloy/config.alloy:ro
+      - logs:/app/logs   # Shared log volume
+    depends_on:
+      - loki
+    networks:
+      - chronicle-network
+  grafana:
+    image: grafana/grafana:11.0.0
+    container_name: chronicle-grafana
+    env_file:
+      - .env
+    ports:
+      - "3001:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SMTP_ENABLED=false
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./observability/provisioning:/etc/grafana/provisioning
+      - logs:/app/logs   # Shared log volume
+    depends_on:
+      - loki
+    networks:
+      - chronicle-network
+
+networks:
+  chronicle-network:
+    driver: bridge
+
+volumes:
+  logs:   # Docker-managed logs
+  loki_data:     # Loki internal storage
+  grafana_data:  # Grafana storage
