--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
     container_name: staleness-rag-app
     volumes:
       - logs:/app/logs
+      - ./data:/app/data
     env_file:
       - .env
     ports:
